--- a/templates/authentication/totp_setup_backup.html
+++ b/templates/authentication/totp_setup_backup.html
@@ -668,7 +668,7 @@
             </a>
             <div class="system-status">
                 <div class="status-indicator"></div>
-                <span>User: {{ saml_attributes.displayName.0|default:request.user.username }}</span>
+                <span>User: {{ ad_display_name|default:request.user.username }} ({{ ad_email|default:request.user.username }})</span>
             </div>
         </div>
         
