handle the Calendar app

--- a/templates/authentication/home.html
+++ b/templates/authentication/home.html
@@ -1859,7 +1859,7 @@
                             </div>
                             <span>Mail</span>
                         </a>
-                        <a href="#" class="app-item">
+                        <a href="{% url 'authentication:calendar' %}" class="app-item">
                             <div class="app-icon">
                                 <i class="fas fa-calendar-alt"></i>
                             </div>
