handle the maps app

--- a/templates/authentication/home.html
+++ b/templates/authentication/home.html
@@ -1877,11 +1877,11 @@
                             </div>
                             <span>Teams</span>
                         </a>
-                        <a href="#" class="app-item">
+                        <a href="{% url 'authentication:maps' %}" class="app-item">
                             <div class="app-icon">
-                                <i class="fas fa-chart-line"></i>
+                                <i class="fas fa-map-marked-alt"></i>
                             </div>
-                            <span>Analytics</span>
+                            <span>Maps</span>
                         </a>
                         <a href="#" class="app-item add-app">
                             <div class="app-icon">
