handle the meet app

--- a/templates/authentication/home.html
+++ b/templates/authentication/home.html
@@ -1871,11 +1871,11 @@
                             </div>
                             <span>Documents</span>
                         </a>
-                        <a href="#" class="app-item">
+                        <a href="{% url 'authentication:meet' %}" class="app-item">
                             <div class="app-icon">
-                                <i class="fas fa-users"></i>
+                                <i class="fas fa-video"></i>
                             </div>
-                            <span>Teams</span>
+                            <span>Meet</span>
                         </a>
                         <a href="{% url 'authentication:maps' %}" class="app-item">
                             <div class="app-icon">
