handle the translate app

--- a/templates/authentication/home.html
+++ b/templates/authentication/home.html
@@ -1883,11 +1883,11 @@
                             </div>
                             <span>Maps</span>
                         </a>
-                        <a href="#" class="app-item add-app">
+                        <a href="{% url 'authentication:translate' %}" class="app-item">
                             <div class="app-icon">
-                                <i class="fas fa-plus"></i>
+                                <i class="fas fa-language"></i>
                             </div>
-                            <span>Add App</span>
+                            <span>Translate</span>
                         </a>
                                     </div>
             </div>
