--- a/templates/authentication/mfa_challenge.html
+++ b/templates/authentication/mfa_challenge.html
@@ -1011,7 +1011,7 @@
             </a>
             <div class="system-status">
                 <div class="status-indicator"></div>
-                <span>Authentication in progress</span>
+                <span>{{ user.get_full_name|default:user.username }}</span>
             </div>
         </div>
         <div class="utility-controls">
